# DEPTH4

./: .env.example  .gitignore  .vercelignore  README.md  VISION.md  config.yaml  dax10_strategy_fixed_BEST copy.txt  eustx50_strategy_fixed_BEST copy.txt  package-lock.json  render.yaml  runbook.md
agents/: acceptance.py  backtester.py  config.py  data_fetch.py  factory_hunt.py  (+19 more)
polybot/: .env.example  .gitignore  README.md  pyproject.toml
polybot/scripts/: list_markets.py  run_bot.py
polybot/src/polybot/: __init__.py  cli.py  client.py  config.py  data.py  journal.py  risk.py  runner.py
polybot/src/polybot/strategies/: __init__.py  base.py  mispricing.py
polybot/tests/: test_risk.py
polymarket-whale-tracker/: .env.example  .gitignore  README.md  pyproject.toml
polymarket-whale-tracker/launchd/: com.whales.discover.plist.tpl  com.whales.score.plist.tpl
polymarket-whale-tracker/scripts/: discover_tick.sh  install_launchd.sh  score_tick.sh  uninstall_launchd.sh
polymarket-whale-tracker/src/whale_tracker/: __init__.py  api.py  backtest.py  cli.py  config.py  db.py  discover.py  leaderboard.py  pnl.py  watcher.py
signal/apps/api/: .dockerignore  .env.example  Dockerfile  check_nvidia_key.py  pyproject.toml
signal/apps/api/signal_api/: __init__.py  config.py  db.py  main.py
signal/apps/api/signal_api/ai/: claude.py  depth4_guard.py  llm_client.py  model_budget.py  model_routing.py  model_telemetry.py  new_thesis_expand.py  prompts.py  thesis_structured_anatomy.py
signal/apps/api/signal_api/causal/: __init__.py  thesis_event_link.py  validator.py
signal/apps/api/signal_api/jobs/: __init__.py  briefing_worker.py  scenario_refinement.py
signal/apps/api/signal_api/routers/: admin_llm_ops.py  admin_llm_usage.py  ingest_cron.py  market_routes.py  stripe_routes.py  thesis_draft_expand.py
signal/apps/api/signal_api/services/: __init__.py  alerts.py  news_ingest.py  one_signal.py  polymarket.py  prices.py  redis.py  ticker_registry.py
signal/apps/api/tests/: conftest.py  test_causal_validator.py  test_depth4_guard.py  test_llm_routed.py  test_model_routing_tier.py  test_new_thesis_expand_validate.py  test_thesis_structured_anatomy.py
signal/apps/api/tests/fixtures/: new_thesis_expand_clarity_act.json
(+6023 files in other folders)
