[project]
name = "polybot"
version = "0.1.0"
description = "A safety-first Polymarket CLOB trading bot. Runs locally, dry-run by default, hard risk caps."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-clob-client>=0.34.6",
    "httpx[http2]>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
polybot = "polybot.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
