[project]
name = "polymarket-whale-tracker"
version = "0.1.0"
description = "Discover, rank, and monitor profitable Polymarket wallets (whales) from public on-chain activity."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.scripts]
whales = "whale_tracker.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
