[project]
name = "signal-api"
version = "0.1.0"
description = "DEPTH4 FastAPI — news, AI, briefings, Stripe"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "anthropic>=0.40.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "redis>=5.2.0",
  "supabase>=2.10.0",
  "yfinance>=0.2.50",
  "stripe>=11.0.0",
  "apscheduler>=3.10.4",
  "python-dateutil>=2.9.0",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.8.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["signal_api*"]
